# Axiom-LLM

./: .gitignore  02-Business-Requirements-Document.md  06-Low-Level-Design.md  07-OCIF-Detailed-Specification.md  08-System-Architecture.md  12-Prompt-Engineering-Guide.md  16-Development-Roadmap.md  19-User-Manual.md  README.md  deep-research-report.md  package-lock.json  pyproject.toml  setup.cfg  start.bat
axiom/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  Step to do.md  alembic.ini  docker-compose.yml  requirements.txt  setup.cfg  start.bat  stop.bat
axiom/agent_engine/: __init__.py  agents.py
axiom/ai/: __init__.py  adapter.py  registry.py
axiom/alembic/: README.md  env.py
axiom/api/: __init__.py  gateway.py
axiom/audit/: __init__.py
axiom/auth/: __init__.py  manager.py
axiom/backend/: __init__.py  main.py  requirements.txt  test_advanced.py  test_integration.py  test_knowledge.py
axiom/benchmark/: __init__.py
axiom/billing/: __init__.py  providers.py
axiom/chunk_engine/: __init__.py  chunker.py
axiom/cognitive_engine/: __init__.py  capture.py  cognition.py  enrichment.py  experience.py  normalization.py  perception.py  pipeline.py  prescription.py  synthesis.py
axiom/configuration/: __init__.py
axiom/context_engine/: __init__.py  context.py
axiom/core/: __init__.py  config.py  contracts.py  engine_registry.py  entitlement.py  event_bus.py  exceptions.py  observability.py  security.py  telemetry.py
axiom/datasets/: __init__.py  generator.py  ingestion.py  registry.py  validator.py  writer.py
axiom/docs/: FINE_TUNING.md  (+9 more)
(+285 files in other folders)
