[metadata]
name = Axiom-LLM
version = 0.1.0
description = Axiom OCIF Enterprise AI Platform
author = Siddharth Dev-spec
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.12

[options.packages.find]
include = core*, api*, governance*, inference*, knowledge*, memory*, ocif*, storage*, billing*, ecosystem*, datasets*, multimodal*
